--- a/packages/torque/src/styles/components/selector-icons-bar.scss
+++ b/packages/torque/src/styles/components/selector-icons-bar.scss
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: row;
 
-  margin-top: -10px;
+  margin-top: auto;
 
   .selector-icons-bar__item {
-    height: 3rem;
+    height: 2.5rem;
     border-radius: 100px;
-    background-color: #FFFFFF;
+    //background-color: #FFFFFF;
     margin: 0.5rem;
 
     &:first-child {
@@ -38,3 +38,45 @@
     background-color: #ffffff;
   }
 }
+
+.selector-icons-borrow-bar {
+  display: flex;
+  flex-direction: row;
+
+  margin-top: -10px;
+
+  .selector-icons-borrow-bar__item {
+    height: 3rem;
+    border-radius: 100px;
+    background-color: #FFFFFF;
+    margin: 0.5rem;
+
+    &:first-child {
+      margin-left: 0;
+    }
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  .selector-icons-borrow-bar__icon {
+    width: 2.5rem;
+  }
+
+  .selector-icons-borrow-bar__button {
+    width: 6rem;
+
+    font-size: 0.75rem;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 3.33;
+    letter-spacing: normal;
+    text-align: center;
+    color: #758295;
+
+    background-color: #ffffff;
+  }
+}
+
